--- a/RightNumber/AndroidManifest.xml
+++ b/RightNumber/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="2"
-    android:versionName="0.2"
-    package="br.com.drzoid.rightnumber">
+    package="br.com.drzoid.rightnumber" android:versionCode="4" android:versionName="0.4">
 
   <application android:icon="@drawable/icon"
                android:label="@string/app_name">
@@ -19,13 +17,16 @@
 
     <!-- Phone number changing receiver -->
     <receiver android:name=".RightNumberReceiver">
-      <intent-filter>
-        <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
-      </intent-filter>
+			<!--
+				Use a priority greater than zero, as we need to let broadcast
+				receivers that block calls be the last to receive the broadcast.
+			-->
+			<intent-filter android:priority="1">
+				<action android:name="android.intent.action.NEW_OUTGOING_CALL" />
+			</intent-filter>
     </receiver>
-
   </application>
 
   <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
-<uses-sdk android:targetSdkVersion="4" android:minSdkVersion="4"></uses-sdk>
+<uses-sdk android:minSdkVersion="3"></uses-sdk>
 </manifest>
