Pretty-printing the manifest

--- a/RightNumber/AndroidManifest.xml
+++ b/RightNumber/AndroidManifest.xml
@@ -1,45 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.drzoid.rightnumber" android:versionCode="5" android:versionName="0.5">
-
+          package="br.com.drzoid.rightnumber"
+          android:versionCode="5"
+          android:versionName="0.5">
   <application android:icon="@drawable/icon"
                android:label="@string/app_name">
-
     <!-- Settings activity -->
     <activity android:name=".RightNumberActivity"
               android:label="@string/app_name">
       <intent-filter>
-         <action android:name="android.intent.action.MAIN" />
-         <category android:name="android.intent.category.LAUNCHER" />
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
     <activity android:name=".TestNumberActivity" />
 
     <!-- Phone number changing receiver at priority 10 -->
     <receiver android:name=".RightNumberReceiverPriority10">
-			<!--
-				Use a priority greater than zero, as we need to let broadcast
-				receivers that block calls be the last to receive the broadcast.
-			-->
-			<intent-filter android:priority="10">
-				<action android:name="android.intent.action.NEW_OUTGOING_CALL" />
-			</intent-filter>
+      <!-- Use a priority greater than zero, as we need to let broadcast receivers 
+        that block calls be the last to receive the broadcast. -->
+      <intent-filter android:priority="10">
+        <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
+      </intent-filter>
     </receiver>
-    
+
     <!-- Phone number changing receiver at priority 0 -->
     <receiver android:name=".RightNumberReceiverPriority0">
-			<!--
-				Use a priority greater than zero, as we need to let broadcast
-				receivers that block calls be the last to receive the broadcast.
-			-->
-			<intent-filter android:priority="0">
-				<action android:name="android.intent.action.NEW_OUTGOING_CALL" />
-			</intent-filter>
+      <!-- Use a priority greater than zero, as we need to let broadcast receivers 
+        that block calls be the last to receive the broadcast. -->
+      <intent-filter android:priority="0">
+        <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
+      </intent-filter>
     </receiver>
-    
   </application>
 
   <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
-	<uses-sdk android:minSdkVersion="3"></uses-sdk>
-	
+  <uses-sdk android:minSdkVersion="3" />
+
 </manifest>
