--- a/RightNumber/AndroidManifest.xml
+++ b/RightNumber/AndroidManifest.xml
@@ -35,6 +35,15 @@
   </application>
 
   <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+
+  <!-- Market filters -->
+  <uses-feature android:name="android.hardware.telephony" />
+  <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
   <uses-sdk android:minSdkVersion="3" />
+  <supports-screens android:anyDensity="true"
+                    android:xlargeScreens="true"
+                    android:largeScreens="true"
+                    android:normalScreens="true"
+                    android:smallScreens="true" />
 
 </manifest>
