Adding proguard to the project export - this reduces the APK size by 63% (but requires that we keep the files in proguard/ if we want stack traces to be useful)

--- a/RightNumber/default.properties
+++ b/RightNumber/default.properties
@@ -11,3 +11,4 @@
 target=android-9
 # Indicates whether an apk should be generated for each density.
 split.density=false
+proguard.config=proguard.cfg
