--- a/RightNumber/AndroidManifest.xml
+++ b/RightNumber/AndroidManifest.xml
@@ -4,7 +4,8 @@
           android:versionCode="5"
           android:versionName="0.5">
   <application android:icon="@drawable/icon"
-               android:label="@string/app_name">
+               android:label="@string/app_name"
+               android:backupAgent="RightNumberBackupAgent">
     <!-- Settings activity -->
     <activity android:name=".RightNumberActivity"
               android:label="@string/app_name">
