--- a/RightNumber/AndroidManifest.xml
+++ b/RightNumber/AndroidManifest.xml
@@ -8,7 +8,8 @@
                android:backupAgent="RightNumberBackupAgent">
     <!-- Settings activity -->
     <activity android:name=".RightNumberActivity"
-              android:label="@string/app_name">
+              android:label="@string/app_name"
+              android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|fontScale|uiMode">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
@@ -35,7 +36,12 @@
     </receiver>
   </application>
 
+  <!-- Permission for formatting phone numbers -->
   <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+
+  <!-- Permissions for batch updating contacts -->
+  <uses-permission android:name="android.permission.READ_CONTACTS" />
+  <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
   <!-- Market filters -->
   <uses-feature android:name="android.hardware.telephony" />
