--- a/RightNumber/proguard.cfg
+++ b/RightNumber/proguard.cfg
@@ -18,6 +18,7 @@
 -keep public class * extends android.app,backup.BackupAgent
 -keep public class * extends android.content.BroadcastReceiver
 -keep public class * extends android.content.ContentProvider
+-keep public class * extends android.preference.Preference
 -keep public class com.android.vending.licensing.ILicensingService
 
 -keepclasseswithmembernames class * {
