--- a/RightNumber/AndroidManifest.xml
+++ b/RightNumber/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="br.com.drzoid.rightnumber"
-          android:versionCode="10"
-          android:versionName="0.8.1">
+          android:versionCode="11"
+          android:versionName="0.8.2">
 
   <!-- Permission for formatting phone numbers -->
   <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
@@ -15,7 +15,7 @@
   <uses-feature android:name="android.hardware.telephony" />
   <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
-  <uses-sdk android:minSdkVersion="3"/>
+  <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="10"/>
   <supports-screens android:anyDensity="true"
                     android:xlargeScreens="true"
                     android:largeScreens="true"
